--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,6 @@ code {
 .bg-black {
   background-color: #181818;
 }
+.bg-custom {
+  background-image: linear-gradient(to right, rgb(204, 36, 36), rgb(255, 100, 53));
+}
