--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,6 @@ code {
 .bg-custom {
   background-image: linear-gradient(to right, rgb(204, 36, 36), rgb(255, 100, 53));
 }
+a {
+  text-decoration: none;
+}
